--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "recharts": "^1.0.0-beta.6"
   },
   "devDependencies": {
     "react-scripts": "1.0.17"
