--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "insurance-graph-react",
-  "homepage" : "http://preshetin.github.io/insurance-graph-react",
+  "homepage": "http://preshetin.github.io/insurance-graph-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bulma": "^0.6.1",
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
