--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bulma": "^0.6.1",
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "recharts": "^1.0.0-beta.6"
   },
